--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
         <div class="content">
             <p id="oi">Oi, sou eu de novo...</p>
             <div class="imagem">
-                <img src="../imagens/charmosinho.png" alt="charmosinho"> 
+                <img src="charmosinho.png" alt="charmosinho"> 
             </div>
 
             <div class="feliz">
-                <p>Feliz 1 mês de namoro! <span><img src="../imagens/heart-removebg-preview.png" alt="coração"></span></p>
+                <p>Feliz 1 mês de namoro! <span><img src="heart-removebg-preview.png" alt="coração"></span></p>
             </div>
 
             <div class="texto">
