--- a/lua.html
+++ b/lua.html
@@ -8,15 +8,15 @@
 </head>
 <body>
     <div class="texto">
-        <h2>Eu te amo da terra até a lua! <span class="coracao"><img src="../imagens/heart-removebg-preview.png" alt="coração"></span></h2>
+        <h2>Eu te amo da terra até a lua! <span class="coracao"><img src="heart-removebg-preview.png" alt="coração"></span></h2>
     </div>
 
     <div class="terra">
-        <img src="../imagens/terra-removebg-preview.png" alt="terra">
+        <img src="terra-removebg-preview.png" alt="terra">
     </div>
     
     <div class="lua">
-        <img src="../imagens/lua-removebg-preview.png" alt="lua">
+        <img src="lua-removebg-preview.png" alt="lua">
     </div>
 </body>
 </html>
