--- a/violao.html
+++ b/violao.html
@@ -9,7 +9,7 @@
 <body>
     <div class="box-video">
         <p>Daniel Caesar & H.E.R - Best part</p>
-        <video src="../imagens/video.mp4" controls type="video/mp4"></video>
+        <video src="video.mp4" controls type="video/mp4"></video>
         <div class="botao">
             <a href="lua.html">Clique aqui para lembrar:</a>
         </div>
