--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </div>
 
             <div class="texto">
-                <p>Quero expressar minha felicidade por ter alguém como você ao meu lado nesse primeiro mês. Desejo e me me esforçarei para que seja o primeiro de tantos que ainda virão. Deixa eu te mostrar um pouco de como eu te amo!</p>
+                <p>Quero expressar minha felicidade por ter alguém como você ao meu lado nesse primeiro mês. Desejo e me esforçarei para que seja o primeiro de tantos que ainda virão. Deixa eu te mostrar um pouco de como eu te amo!</p>
             </div>
 
             <div class="botao">
